RESOLVED FIXED251577
AX: Object IDs should not be generated with AXTreeStore::generateNewID().
https://bugs.webkit.org/show_bug.cgi?id=251577
Summary AX: Object IDs should not be generated with AXTreeStore::generateNewID().
Andres Gonzalez
Reported 2023-02-02 04:36:39 PST
Attachments
Patch (3.03 KB, patch)
2023-02-02 04:49 PST, Andres Gonzalez
no flags
Radar WebKit Bug Importer
Comment 1 2023-02-02 04:36:54 PST
Andres Gonzalez
Comment 2 2023-02-02 04:49:17 PST
Tyler Wilcock
Comment 3 2023-02-02 09:07:39 PST
Comment on attachment 464813 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=464813&action=review I'm surprised that this bug didn't cause any tests to fail. Is it testable in any way? > Source/WebCore/accessibility/AXObjectCache.h:239 > + AccessibilityObject* objectForID(const AXID id) const { return m_objects.get(id); } Why not use a reference here?
Andres Gonzalez
Comment 4 2023-02-02 09:28:34 PST
(In reply to Tyler Wilcock from comment #3) > Comment on attachment 464813 [details] > Patch > > View in context: > https://bugs.webkit.org/attachment.cgi?id=464813&action=review > > I'm surprised that this bug didn't cause any tests to fail. Is it testable > in any way? This is going away with the TextMarker reword, so I don't think it is worthy creating a test at this point. > > > Source/WebCore/accessibility/AXObjectCache.h:239 > > + AccessibilityObject* objectForID(const AXID id) const { return m_objects.get(id); } > > Why not use a reference here? because it can be null, i.e., the tree can be requested for an AXID that is no longer there.
EWS
Comment 5 2023-02-06 15:54:38 PST
Committed 259922@main (c11d33bb0bb2): <https://commits.webkit.org/259922@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 464813 [details].
Note You need to log in before you can comment on or make changes to this bug.