Cherry-pick c11d33bb0bb2. rdar://problem/104956200

AX: Object IDs should not be generated with AXTreeStore::generateNewID().
    https://bugs.webkit.org/show_bug.cgi?id=251577
    <rdar://problem/104956200>

    Reviewed by Chris Fleizach.

    In the patch for
        https://bugs.webkit.org/show_bug.cgi?id=249480
        <rdar://problem/103449294>

    I erroneously switched the generation of object IDS in the AXObjectCache to use AXTreeStore::generateNewID. This is wrong because generateNewID checks the presence of the ID against the IDs of AX trees and not against object IDs. This patch rectifies this by bringing back AXObjectCache::generateNewObjectID (new name).

    * Source/WebCore/accessibility/AXObjectCache.cpp:
    (WebCore::AXObjectCache::generateNewObjectID const):
    (WebCore::AXObjectCache::getAXID):
    * Source/WebCore/accessibility/AXObjectCache.h:
    (WebCore::AXObjectCache::objectForID const): No need to pass AXID by reference since it just wraps an unsgined.

    Canonical link: https://commits.webkit.org/259922@main

Canonical link: https://commits.webkit.org/259872.5@safari-7616.1.1-branch